Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Coupon__c/UB_Coupon__c.object-meta.xml
<CustomObject>
    <label>UB Coupon</label>
    <nameField>
        <label>UBCoupon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UB Coupon</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>