Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Coupon__c/fields/QR_Image__c.field-meta.xml
<CustomField>
    <fullName>QR_Image__c</fullName>
    <formula>IMAGE( QR_Image_URL__c , &quot;test&quot; ,75, 75)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Image</label>
    <type>Text</type>
</CustomField>