Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Coupon__c/fields/QR_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>QR_Image_URL__c</fullName>
    <formula>&quot;https://chart.googleapis.com/chart?chs=150x150&amp;cht=qr&amp;chl=&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Image URL</label>
    <type>Text</type>
</CustomField>