Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Coupon__c/fields/QR_URL__c.field-meta.xml
<CustomField>
    <fullName>QR_URL__c</fullName>
    <formula>&quot;http://sdo-134eb721b22.force.com/qr&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR URL</label>
    <type>Text</type>
</CustomField>