Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Coupon__c/fields/UB_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UB_Campaign__c</fullName>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>UB Coupon</relationshipLabel>
    <relationshipName>UB_Coupon</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>