Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Coupon__c/fields/UB_CampaignMember__c.field-meta.xml
<CustomField>
    <fullName>UB_CampaignMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Member</label>
    <referenceTo>UB_Campaign_Member__c</referenceTo>
    <relationshipLabel>UB Coupon</relationshipLabel>
    <relationshipName>UB_Coupon</relationshipName>
    <type>Lookup</type>
</CustomField>