Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Coupon__c/fields/UB_Coupon_Number__c.field-meta.xml
<CustomField>
    <fullName>UB_Coupon_Number__c</fullName>
    <displayFormat>CUPNCampOutlet-{0000}</displayFormat>
    <label>Coupon Number</label>
    <type>AutoNumber</type>
</CustomField>