Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Coupon__c/fields/UB_Redeem_On__c.field-meta.xml
<CustomField>
    <fullName>UB_Redeem_On__c</fullName>
    <label>Redeemed Date</label>
    <type>Date</type>
</CustomField>