Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Coupon__c/fields/UB_Valid__c.field-meta.xml
<CustomField>
    <fullName>UB_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid</label>
    <type>Checkbox</type>
</CustomField>