Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Coupon__c/fields/UB_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>UB_Valid_From__c</fullName>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>