Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Coupon__c/fields/UB_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>UB_Valid_To__c</fullName>
    <formula>UB_Valid_From__c + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>